--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Exchange-App</title>
 </head>
@@ -34,27 +34,27 @@
                 <div class="main-left">
                     <h4>У меня есть </h4>
                     <div class="change-button">
-                        <p class="from-rub">RUB</p>
-                        <p class="from-usd">USD</p>
-                        <p class="from-eur">EUR</p>
-                        <p class="gbp">GBP</p>
+                        <p>RUB</p>
+                        <p>USD</p>
+                        <p>EUR</p>
+                        <p>GBP</p>
                     </div>
                     <div class="change-area">
-                        <input type="text" value="5000">
-                        <p>1 RUB = 0.0135 USD</p>
+                        <input type="text">
+                        <p></p>
                     </div>
                 </div>
                 <div class="main-right">
                     <h4>Хочу приобрести</h4>
                     <div class="change-button">
-                        <p class="to-rub">RUB</p>
-                        <p class="to-usd">USD</p>
-                        <p class="to-eur">EUR</p>
-                        <p class="to-gbp">GBP</p>
+                        <p>RUB</p>
+                        <p>USD</p>
+                        <p>EUR</p>
+                        <p>GBP</p>
                     </div>
                     <div class="change-area">
-                        <input type="text" value="67.6685">
-                        <p>1 USD = 73.8896 RUB</p>
+                        <input type="text" >
+                        <p></p>
                     </div>
                 </div>
             </div>
