--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Exchange-App</title>
+    <title>Currency Converter</title>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="head-left">
-                <img src="./image/logo.svg" alt="">
+                <img src="./image/logo.svg" alt="Logo">
                 <div class="about">
-                    <p class="bank">БАНК</p>
+                    <p>БАНК</p>
                     <p>БИЗНЕС</p>
                     <p>ИНВЕСТИЦИИ</p>
                     <p>СТРАХОВАНИЕ</p>
@@ -26,13 +23,18 @@
             </div>
             <div class="head-right">
                 <button>ВОЙТИ</button>
+                <div class="burger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </header>
         <main>
             <h1>Конвертер валют онлайн</h1>
             <div class="main-box">
                 <div class="main-left">
-                    <h4>У меня есть </h4>
+                    <h4>У меня есть</h4>
                     <div class="change-button">
                         <p>RUB</p>
                         <p>USD</p>
@@ -53,7 +55,7 @@
                         <p>GBP</p>
                     </div>
                     <div class="change-area">
-                        <input type="text" >
+                        <input type="text">
                         <p></p>
                     </div>
                 </div>
