--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
         </header>
+        <div class="innerAlert" >İnternet bağlantısı yoxdu. Zəhmət olmasa bağlantınızı kontrol eləyin.</div>
         <main>
             <h1>Конвертер валют онлайн</h1>
             <div class="main-box">
